--- a/tauri/static/assets/css/mod_conninfo.css
+++ b/tauri/static/assets/css/mod_conninfo.css
@@ -59,12 +59,12 @@ div#mod_conninfo i {
     width: 100%;
 }
 
-div#mod_conninfo canvas {
+div#mod_conninfo canvas, div.mod_conninfo canvas {
     width: 100%;
     height: 8.7vh;
     z-index: 10;
-    border-top: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
-    border-bottom: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
+    border-top: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.4);
+    border-bottom: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.4);
     margin: 0.46vh 0vh;
     opacity: 1;
 }
