--- a/tauri/static/assets/css/mod_cpuinfo.css
+++ b/tauri/static/assets/css/mod_cpuinfo.css
@@ -99,10 +99,10 @@ div#mod_cpuinfo i {
     margin-top: 0.5vh;
 }
 
-div#mod_cpuinfo canvas {
-    width: 76%;
-    height: 4.167vh;
-    border-top: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
-    border-bottom: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.3);
-    margin: 0.46vh 0vh;
+div#mod_cpuinfo canvas, div.mod_cpuinfo canvas {
+    width: 100%;
+    height: 6vh;
+    border-top: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.4);
+    border-bottom: 0.092vh dashed rgba(var(--color_r), var(--color_g), var(--color_b), 0.4);
+    margin: 0.6vh 0vh;
 }
